fix jumping

--- a/src/components/main/project/lightproject.css
+++ b/src/components/main/project/lightproject.css
@@ -38,12 +38,12 @@
   }
   .Lightproject {
       height:100%;
-      width:100vw;
+      width:100%;
 
   }
   .Lightproject svg{
 
-    width: 100vw;
+    width: 100%;
 
   }
   
